<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/chomeico4"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="false"
        android:baselineAligned="false"
        android:contentDescription="@string/homedes"
        android:cropToPadding="false"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/csearchico4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carsubtotalfee"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/csearchico4"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="3dp"
        android:layout_weight="1"
        android:contentDescription="@string/searchdes"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/ccartico4"
        app:layout_constraintEnd_toStartOf="@+id/ccartico4"
        app:layout_constraintStart_toEndOf="@+id/chomeico4"
        app:layout_constraintTop_toTopOf="@+id/corderico4"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/search" />

    <ImageView
        android:id="@+id/ccartico4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:contentDescription="@string/cartdes"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/corderico4"
        app:layout_constraintStart_toEndOf="@+id/csearchico4"
        app:layout_constraintTop_toBottomOf="@+id/carsubtotalfee"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/cart" />

    <ImageView
        android:id="@+id/corderico4"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:contentDescription="@string/odersdes"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cprofileico4"
        app:layout_constraintStart_toEndOf="@+id/ccartico4"
        app:layout_constraintTop_toBottomOf="@+id/carsubtotalfee"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/menu" />

    <ImageView
        android:id="@+id/cprofileico4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:contentDescription="@string/profiledes"
        app:layout_constraintBottom_toBottomOf="@+id/ccartico4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/corderico4"
        app:layout_constraintTop_toTopOf="@+id/corderico4"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/cartvisa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourOrder"
        app:layout_constraintBaseline_toBaselineOf="@+id/cartsubt2"
        app:layout_constraintStart_toStartOf="@+id/cartordername" />

    <TextView
        android:id="@+id/carttxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cart"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/meal1"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/cartTitle1"
        app:layout_constraintStart_toStartOf="@+id/carttitle2" />

    <TextView
        android:id="@+id/carttitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartTitle" />

    <TextView
        android:id="@+id/cartlocation"
        android:layout_width="207dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="11dp"
        android:text="@string/address1"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@+id/cartmap"
        app:layout_constraintStart_toEndOf="@+id/cartmap"
        app:layout_constraintTop_toTopOf="@+id/cartmap" />

    <TextView
        android:id="@+id/cartsubt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/addNew"
        app:layout_constraintBottom_toTopOf="@+id/cartordername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/cartvisa"
        app:layout_constraintTop_toBottomOf="@+id/carttitle2"
        app:layout_constraintVertical_bias="0.967" />

    <TextView
        android:id="@+id/cartTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/meal1"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/cartTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartedit"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="51dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/carttotalprice"
        app:layout_constraintEnd_toEndOf="@+id/cartsubt2"
        app:layout_constraintTop_toTopOf="@+id/cartsubt2" />

    <TextView
        android:id="@+id/cartordername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="7dp"
        android:text="@string/meal1"
        app:layout_constraintBottom_toTopOf="@+id/cartaddpromo"
        app:layout_constraintStart_toEndOf="@+id/cartcount" />

    <TextView
        android:id="@+id/cartcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        app:layout_constraintBaseline_toBaselineOf="@+id/cartordername"
        app:layout_constraintStart_toStartOf="@+id/cartaddpromo" />

    <TextView
        android:id="@+id/cartdel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/deliveryFee"
        app:layout_constraintEnd_toEndOf="@+id/cartsubtotal"
        app:layout_constraintStart_toEndOf="@+id/cartsubtotal"
        app:layout_constraintTop_toBottomOf="@+id/cartplaceorder" />

    <TextView
        android:id="@+id/cartsubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="13dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartdel" />

    <TextView
        android:id="@+id/cartchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="76dp"
        android:text="@string/change"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/carsubtotalfee"
        app:layout_constraintEnd_toEndOf="@+id/carsubtotalfee" />

    <TextView
        android:id="@+id/cartplaceorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/subtotal"
        app:layout_constraintStart_toStartOf="@+id/cartdel"
        app:layout_constraintTop_toBottomOf="@+id/cartaddpromo" />

    <TextView
        android:id="@+id/carttotalprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price1"
        app:layout_constraintBottom_toBottomOf="@+id/cartplaceorder"
        app:layout_constraintStart_toStartOf="@+id/textView27"
        app:layout_constraintTop_toTopOf="@+id/cartplaceorder"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cartdelfee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/price2"
        app:layout_constraintStart_toStartOf="@+id/carttotalprice"
        app:layout_constraintTop_toBottomOf="@+id/carttotalprice" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="13dp"
        android:text="@string/price3"
        app:layout_constraintEnd_toEndOf="@+id/cartchange"
        app:layout_constraintTop_toBottomOf="@+id/cartdelfee" />

    <TextView
        android:id="@+id/carsubtotalfee"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginBottom="59dp"
        android:layout_marginTop="59dp"
        android:background="@color/green"
        android:text="@string/placeOrder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartsubtotal" />

    <TextView
        android:id="@+id/cartaddpromo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="258dp"
        android:text="@string/addPromo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cartplaceorder"
        app:layout_constraintStart_toEndOf="@+id/cartplaceorder" />

    <ImageView
        android:id="@+id/cartmap"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="91dp"
        app:layout_constraintBottom_toBottomOf="@+id/cartedit"
        app:layout_constraintEnd_toEndOf="@+id/cartvisa"
        app:layout_constraintStart_toEndOf="@+id/cartcount"
        app:layout_constraintTop_toBottomOf="@+id/carttxt1"
        app:srcCompat="@drawable/map" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="45dp"
        android:layout_height="31dp"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="51dp"
        app:layout_constraintBottom_toTopOf="@+id/chomeico4"
        app:layout_constraintEnd_toEndOf="@+id/cartdel"
        app:layout_constraintStart_toStartOf="@+id/carsubtotalfee"
        app:layout_constraintTop_toBottomOf="@+id/cartdel"
        app:srcCompat="@drawable/visa" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/remove"
        android:textColor="@color/red"
        app:layout_constraintBaseline_toBaselineOf="@+id/cartedit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cartedit" />

</android.support.constraint.ConstraintLayout>